<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.supinfo.supsms.app.activity.BackupActivity"
                android:background="@drawable/colorful_triangles_background" android:orientation="vertical">


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_contact_btn_text"
            android:id="@+id/btn_backup_contact"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_sms_btn_text"
            android:id="@+id/btn_backup_sms"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout_btn_text"
            android:id="@+id/btn_logout"/>
    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/pb_advancement"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/tv_advancement"
            android:layout_gravity="center_horizontal"
            />
</LinearLayout>
