<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}"

    android:orientation="vertical" android:weightSum="1" android:background="@drawable/colorful_triangles_background">
        <!--android:background="@drawable/colorful_triangles_background" -->

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="64sp"
            android:gravity="center"
            android:id="@+id/tv_title"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="60dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_user_text"
            android:id="@+id/textView"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="0dp"
            android:textColor="#ffffffff"/>
    <EditText
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_login"
            android:inputType="text"
            android:background="#b4ffffff"
            android:layout_weight="0.05"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/password_text"
            android:id="@+id/textView1"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="0dp"
            android:textColor="#ffffffff"/>

    <EditText
            android:layout_marginTop="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/et_password"
            android:layout_weight="0.05"
            android:background="#b4ffffff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="#c8ffffff"
            android:textColor="#ff1a1a1a"/>

</LinearLayout>
